--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,10 @@
 
 [core]
 	editor = code --wait
+	pager = diff-so-fancy | less --tabs=4 -RFX
+
+[interactive]
+	diffFilter = diff-so-fancy --patch
 
 [alias]
 
