--- a/.gitconfig
+++ b/.gitconfig
@@ -45,3 +45,21 @@
   pushu = push -u origin HEAD
   f = fetch --all
   fpull = fetch --all && pull
+
+[color]
+	ui = true
+
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+
+[color "diff"]
+	meta = 11
+	frag = magenta bold
+	func = 146 bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
