--- a/.gitconfig
+++ b/.gitconfig
@@ -31,6 +31,7 @@
   slist = stash list
   spop = stash pop
   unstage = reset HEAD
+  nuke = reset --hard HEAD
   c = commit
   cm = commit -m
   amend = !git add -A && git commit --amend
