manage you GCP fav project in config/secrets

--- a/.secrets.dist
+++ b/.secrets.dist
@@ -1,6 +1,8 @@
 # Example of a `.secrets` file after setup
 GH_EMAIL=xxx@xxxxx.com
 
+FAV_GCP_PROJECT=XXXX  # favorite GCP project to activate on cloudshell
+
 RCLONE_BACKUP_SOURCE_PATH=XXX  # absolute path to the source you want to backup
 RCLONE_GOOGLE_STORAGE_PROJECT_NUMBER=XXX  # Google Cloud project number
 RCLONE_GOOGLE_STORAGE_BUCKET=XXX  # Google Storage bucket name
