--- a/.gitconfig
+++ b/.gitconfig
@@ -39,6 +39,7 @@
   ssave = stash save
   slist = stash list
   spop = stash pop
+  sdrop = stash drop
   unstage = reset HEAD
   nuke = reset --hard HEAD
   c = commit
