better secrets variable name for AI

--- a/.secrets.dist
+++ b/.secrets.dist
@@ -6,3 +6,6 @@ FAV_GCP_PROJECT=XXXX  # favorite GCP project to activate on cloudshell
 RCLONE_BACKUP_SOURCE_PATH=XXX  # absolute path to the source you want to backup
 RCLONE_GOOGLE_STORAGE_PROJECT_NUMBER=XXX  # Google Cloud project number
 RCLONE_GOOGLE_STORAGE_BUCKET=XXX  # Google Storage bucket name
+
+VERTEXAI_PROJECT_ID=XXX  # project for GCP Vertex AI 
+VERTEXAI_LOCATION=XXX  # region for GCP Vertex AI 
